--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "nodeman": "^1.1.2"
+    "nodeman": "^1.1.2",
+    "yup": "^1.4.0"
   }
 }
